Eredményszámláló kijelző alapszerkezet
Létrehoztam a kijelzőnek használt oldalt, aminek megcsináltam a scripteléshez szükséges alapszerkezetét, valamint az átláthatóság kedvéért egy minimális CSS állítás is történt. Ezek mellett hozzáadtam a sárga és piros lapnak használt képeket a mappához.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 body {
     background-color: var(--background-color);
+    color: white;
 }
 #homeContent {
     margin: auto;
@@ -28,4 +29,8 @@ h1 {
 }
 label {
     color: white;
+}
+img {
+    width: 30px;
+
 }
