--- a/style.css
+++ b/style.css
@@ -34,3 +34,25 @@ img {
     width: 30px;
 
 }
+ul {
+    list-style: none;
+}
+li>button {
+    float: right;
+}
+.card::before {
+    content: "";
+    background-size: 25px 25px;
+    display: inline-flex;
+    align-items: center;
+    width: 25px;
+    height: 35px;
+    padding-right: 10px;
+    background-repeat: no-repeat;
+}
+.redCard::before {
+    background-image: url('img/redCard.png');
+}
+.yellowCard::before {
+    background-image: url('img/yellowCard.png');
+}
