--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@
 body {
     background-color: var(--background-color);
     color: white;
+    font-family: JockeyOne;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 #homeContent {
     margin: auto;
@@ -26,14 +31,27 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 1708px;
+    height: 872px;
+    top: 104px;
+    left: 106px;
+    border-radius: 57px;
 }
 #teamInputs {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-bottom: 30px;
 }
 h1 {
     color: white;
+    font-size: 110px;
+    font-weight: 400;
+    line-height: 153.78px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-bottom: 50px;
 }
 label {
     color: white;
@@ -63,4 +81,98 @@ li>button {
 }
 .yellowCard::before {
     background-image: url('img/yellowCard.png');
+}
+footer{
+    font-family: jetBrains;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 34.32px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: var(--background-color);
+    margin-top: 100px;
+}
+.csapatnev{
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 50.33px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+#team1Input{
+    font-family: JockeyOne;
+    color: #000000;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 55.92px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 500px;
+    height: 45px;
+    top: 423px;
+    left: 215px;
+    border-radius: 25px;
+    background-color: var(--input-field);
+    margin-right: 300px;
+}
+#team2Input{
+    font-family: JockeyOne;
+    color: #000000;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 55.92px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    width: 500px;
+    height: 45px;
+    top: 423px;
+    left: 215px;
+    border-radius: 25px;
+    background-color: var(--input-field);
+}
+#halftimeInput{
+    font-family: JockeyOne;
+    color: #000000;
+    width: 100px;
+    height: 45px;
+    top: 587px;
+    left: 890px;
+    border-radius: 25px;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 67.1px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    background-color: var(--input-field);
+    margin-bottom: 20px;
+}
+.felido{
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 44.74px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+#openMatch{
+    margin-top: 30px;
+    background-color: #217121;
+    width: 327px;
+    height: 72px;
+    top: 720px;
+    left: 796px;
+    border-radius: 25px;
+    font-family: JockeyOne;
+    color: #FFFFFF;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 61.51px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
 }
