--- a/style.css
+++ b/style.css
@@ -45,9 +45,7 @@ body {
 }
 h1 {
     color: white;
-<<<<<<< HEAD
     height: 110px;
-=======
     font-size: 110px;
     font-weight: 400;
     line-height: 153.78px;
@@ -55,7 +53,6 @@ h1 {
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     margin-bottom: 50px;
->>>>>>> 63888365c9af379989efe31fcbecd7acf01725ae
 }
 label {
     color: white;
@@ -86,10 +83,9 @@ li>button {
 .yellowCard::before {
     background-image: url('img/yellowCard.png');
 }
-<<<<<<< HEAD
 label, h1, p, button{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-=======
+}
 footer{
     font-family: jetBrains;
     font-size: 26px;
@@ -197,5 +193,4 @@ footer{
     font-weight: 400;
     line-height: 84.48px;
     text-align: center;
->>>>>>> 63888365c9af379989efe31fcbecd7acf01725ae
 }
