Kiállítás script, cursor
A hosszabbítás gombra húzott cursor pointer típusú lett
Kiállítás script javítva

--- a/style.css
+++ b/style.css
@@ -457,6 +457,7 @@ button {
 /* Gray hover */
 #overtimeButton:hover:not(:disabled) {
     background-color: var(--btn-foreground-hover);
+    cursor: pointer;
 }
 
 /* Gray active */
